# ida-re-assistant

./: .gitignore  .gitmodules  LICENSE  README.md  setup.bat
docs/: MCP_SETUP.md  PLATFORM_SUPPORT.md  QUICK_START.md
docs/images/: .gitkeep
ida-plugin/: ida_mcp_plugin.py
imgui-client/: .clang-format  CMakeLists.txt  vcpkg.json
imgui-client/cmake/: vcpkg.cmake
imgui-client/src/: main.cpp  vendor.cpp  vendor.hpp
imgui-client/src/api/: llm_api.cpp  llm_api.hpp  mcp_client.cpp  mcp_client.hpp
imgui-client/src/core/: config.hpp  installer.cpp  installer.hpp
imgui-client/src/ui/: ui.cpp  ui.hpp
imgui-client/src/utils/: analysis_history.cpp  analysis_history.hpp  syntax_highlighter.cpp  syntax_highlighter.hpp
mcp-server/: ida_bridge.py  ida_sse_server.py  install_mcp.bat  install_mcp.py  mcp_client_config.example.json  requirements_sse.txt
